--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cinemaddict",
   "version": "17.0.0",
   "private": true,
-  "description": "Проект «{{projectTitle}}» от HTML Academy",
+  "description": "Проект «Киноман» от HTML Academy",
   "scripts": {
     "lint": "eslint src/"
   },
